# semester4

./: .gitignore
arithmetic/hw1/: hw1.sln  test_input.txt
arithmetic/hw1/Knuth2/: Program.cs
arithmetic/hw1/Knuth4/: Knuth4.csproj  Program.cs
arithmetic/hw1/Knuth5/: Program.cs
arithmetic/hw1/application/: Program.cs  application.csproj
arithmetic/hw1/helpers/: Auxiliary.cs  ComplexPolynomial.cs  Functions.cs  Limit.cs  OperationCounter.cs  Polynomial.cs  Polynomial2D.cs  PoweredRationalFunction.cs  RationalFunction.cs  Recurrence.cs
arithmetic/hw1/task1/: Program.cs
arithmetic/hw1/task2/: Program.cs
arithmetic/hw1/task3/: Program.cs
arithmetic/hw1/task4/: Program.cs
arithmetic/hw1/task5/: Program.cs
arithmetic/hw1/task6/: Program.cs
arithmetic/hw1/task7/: Program.cs
arithmetic/hw1/task9/: Program.cs
crypto/hw1/: CMakeLists.txt  main.cpp  menu.cpp
crypto/hw1/task1/: task1.cpp  task1.h
crypto/hw1/task2/: run.h  task2.cpp  task2.h
crypto/hw1/task3/: run.h  task3.cpp  task3.h
crypto/hw1/task4/: run.h  task4.cpp
crypto/hw1/task4/auxiliary/: shared_memory.h
crypto/hw1/task4/ipc/: client.cpp  ipc.h  server.cpp
crypto/hw1/task4/rc4/: rc4.cpp  rc4.h  rc4_aux.h
crypto/hw3/: CMakeLists.txt  _input.txt  menu.cpp
crypto/hw3/task1/: run.h  task1.cpp  task1.h
crypto/hw5/task1/: number_theory_service.cpp  number_theory_service.h  task1.cpp  task1.h
crypto/hw6/: CMakeLists.txt  menu.cpp
crypto/hw6/task1/: run.h  task1.cpp  task1.h
crypto/hw6/task2/: run.h  task2.cpp  task2.h
probability/hw1/: hw1.sln
probability/hw3/: menu.cpp
(+11 files in other folders)
